<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_message">Bill Amount:</string>
    <string name="tip_string">Tip Amount:</string>
    <string name="total_string">Bill Total</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="twentyfive_percent">25%</string>
</resources>
