<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/bill_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/bill_message" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tip_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmount"
        tools:text="@string/tip_string" />

    <Button
        android:id="@+id/tenPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="300dp"
        android:text="@string/ten_percent"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/ten_percent" />

    <Button
        android:id="@+id/fifteenPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="300dp"
        android:text="@string/fifteen_percent"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintStart_toEndOf="@+id/tenPercent"
        tools:text="@string/fifteen_percent" />

    <Button
        android:id="@+id/twentyPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="300dp"
        android:text="@string/twenty_percent"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercent"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercent"
        tools:text="@string/twenty_percent" />

    <Button
        android:id="@+id/twentyfivePercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="300dp"
        android:text="@string/twentyfive_percent"
        app:layout_constraintBottom_toTopOf="@+id/total"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/twentyfive_percent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="272dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/total_string"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/total_string" />
</android.support.constraint.ConstraintLayout>